...
                    onClick = onNavigateToAccountCreation,
                    colors = ButtonDefaults.buttonColors(
                        containerColor = Color.White,
                        contentColor = Color.Red
                    )
                ) {
                    Text(text = "get started")
                }
            }
        }
    }
}

...
