...
                    colors = ButtonDefaults.buttonColors(
                        containerColor = Color(0xFFF2ECE3),
                        contentColor = Color.Red
                    )
                ) {
                    Text(
                        text = "submit",
                        fontSize = 16.sp
                    )
                }
            }
            Box(){
                Image(
...
